--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -2,13 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{/include/manager_header :: header}">
 <meta charset="UTF-8">
-<title>Manager Student List</title>
 </head>
 <head>
+<!-- 	<link th:href="@{/css/manager/manager_class_list.css}" rel="stylesheet" /> -->
+<!-- 	<link th:href="@{/css/manager/manager_post_list.css}" rel="stylesheet" /> -->
 	<link th:href="@{/css/manager/manager_student_list.css}" rel="stylesheet" />
-	<link th:href="@{/css/manager/manager_class_list.css}" rel="stylesheet" />
-	<link th:href="@{/css/manager/manager_post_list.css}" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<!-- 서브바 부분 -->
@@ -19,7 +17,9 @@
 	<div class="home-section">
 		<!-- title -->
 		<div class="title_wrap">
-			<span class="title" th:text="|${title} : |"></span><a class="title_a" id="className" th:attrappend="text=${thisClass.clssId!=null}?${thisClass.clssNm}" th:href="@{/manager/class/__${thisClass.clssId}__}" th:value="${thisClass.clssId}"></a>
+			<span class="title" th:text="${title}"></span><br>
+			<a class="title_a" id="className" th:if=${thisClass.clssId!=null} th:text="${thisClass.clssNm}" th:href="@{/manager/class/__${thisClass.clssId}__}" th:value="${thisClass.clssId}"></a>
+			<a class="title_a" id="className" th:if=${thisClass.clssId==null} th:value="${thisClass.clssId}"></a>
 		</div>
 
 		<!-- content wrap-->
@@ -60,348 +60,43 @@
 				</span>
 			</div>
 			<!-- End : 테이블 조작 -->
-			
+
 			<!-- table 시작 -->
 			<table id="stdt_list_table">
-			<thead>
-				<tr id="stdt_list_table_head">
-					<th><input type="checkbox" id="chkAllStdt"></th>
-					<th>번호</th>
-					<th>이름</th>
-					<th>이메일</th>
-					<th>연락처</th>
-					<th>성별</th>
-					<th>생년월일</th>
-					<th th:each="wlogCodeName:${wlogCodeNameList}"
-						th:text="${wlogCodeName.cmcdNm}"></th>
-					<th>이수율</th>
-					<th>이수여부</th>
-				</tr>
+				<thead id="stdt_list_table_thead">
+					<tr class="stdt_list_table_head">
+						<th><input type="checkbox" id="chkAllStdt"></th>
+						<th>번호</th>
+						<th>이름</th>
+						<th>이메일</th>
+						<th>연락처</th>
+						<th>성별</th>
+						<th>생년월일</th>
+						<th th:each="wlogCodeName:${wlogCodeNameList}" th:text="${wlogCodeName.cmcdNm}"></th>
+						<th>이수율</th>
+						<th>이수여부</th>
+					</tr>
 				</thead>
-				<tbody id="stdt_list_table_tbody">
-				<tr th:each="stdt:${stdtList}" id="stdt_list_table_row">
-					<td><input type="checkbox" id="chkStdt" name="checkedStdt" th:value="${stdt.stdtId}"></td>
-					<td th:text="${stdtStat.count}"></td>
-					<td th:text="${stdt.stdtNm}"></td>
-					<td th:text="${stdt.userEmail}">이메일</td>
-					<td th:text="${stdt.stdtTel}">연락처</td>
-					<td th:text="${stdt.genderCd}">성별</td>
-					<td th:text="${stdt.birthDd}">생년월일</td>
-					<td th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
-					<td th:text="엄">이수율</td><!-- 구현 방법 : wlog 에서 totalTm가져오고 교육과정의 이수 시간을 가져와서 백분율을 출력 -->
-					<td th:text="${stdt.jobCd}">이수여부</td>
-				</tr>
+				<tbody id="stdt_list_table_tbody" class="stdt_list_table_tbody">
+					<tr th:each="stdt:${stdtList}" class="stdt_list_table_row">
+						<td><input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}"></td>
+						<td th:text="${stdtStat.count}"></td>
+						<td th:text="${stdt.stdtNm}"></td>
+						<td th:text="${stdt.userEmail}">이메일</td>
+						<td th:text="${stdt.stdtTel}">연락처</td>
+						<td th:text="${stdt.genderCd}">성별</td>
+						<td th:text="${stdt.birthDd}">생년월일</td>
+						<td th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
+						<td th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 3) + ' %'}"
+						></td><!-- wlog 에서 totalTm가져오고 교육과정의 이수 시간을 가져와서 백분율을 출력 -->
+						<td th:text="${stdt.jobCd}">이수여부</td>
+					</tr>
 				</tbody>
 			</table>
 			<!-- End : table 시작-->
 		</div>
 	</div>
-
-<script>
-var chkAll = $("#chkAllStdt");//전체 체크박스
-var chkList = $("input[name=checkedStdt]");//존재하는 stdt체크박스 리스트
-var isChecked = chkAll.prop("checked");//체크된 stdt체크박스 리스트
-var allChecked = chkList.filter(":checked").length === chkList.length;
-var stdtListTable = document.getElementById('stdt_list_table_tbody');//tbody 선택하기
-var date = new Date();
-var year = date.getFullYear();
-
-//오늘 기준 이번 달의 첫 날 반환
-function getFirstDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var day = "01";return year + "-" + month + "-" + day;}
-//오늘 기준 이번 달의 마지막 날 반환
-function getLastDay(){var month = ("0" + (1 + date.getMonth())).slice(-2);var lastDay = new Date(year,month, 0).getDate();return year + "-" + month + "-" + lastDay;}
-//tbody의 모든 내용을 삭제
-function clearTable(){if(stdtListTable.firstChild != null){while (stdtListTable.firstChild) {stdtListTable.removeChild(stdtListTable.firstChild);}}}
-
-//현재 체크된 목록을 반환 <<< 3번 할 때 쓸 예정
-function getCheckedStdt() {
-	const checkedStdts = [];
-	chkList.each(function () {
-		if ($(this).prop("checked")) {
-			checkedStdts.push($(this).val());
-		}
-	});
-	return checkedStdts;
-}
-//End
-
-//---------------------------------------------------------------------------
-// 1. 체크박스 컨트롤
-	$(document).ready(
-		//document.getElementById('classId').value = document.getElementById('classId').options[document.getElementById('classId').selectedIndex];
-		//"전체" 체크박스의 상태에 따라 나머지 체크박스의 상태를 변경
-		chkAll.on("change", function () {
-			isChecked = chkAll.prop("checked");
-			chkList.prop("checked", isChecked);
-		}),
-		//End
-		//개별 체크박스가 변경될 때 "전체" 체크박스 상태 업데이트
-		chkList.on("change", function () {
-			allChecked = chkList.filter(":checked").length === chkList.length;
-			chkAll.prop("checked", allChecked);
-		})
-		//End
-	);
-//End : 체크박스 컨트롤
-
-// 2. 검색 누르면 검색하세요
-	function search(){
-		//1) tbody의 내용물을 비운다
-		clearTable();
-		$("#chkAllStdt").prop("checked",false);
-		
-		//2) tbody에 붙일 내용물을 만든다
-		var targetClassId = document.getElementById('classId').options[document.getElementById('classId').selectedIndex].value.split("(")[1].split(",")[0].split("=")[1];
-		var targetClassName = document.getElementById('classId').options[document.getElementById('classId').selectedIndex].text;
-		
-		var startDate = document.getElementById("startDate").value;
-		var endDate = document.getElementById("endDate").value;
-		if(startDate==''){startDate=getFirstDay();}
-		if(endDate==''){endDate=getLastDay();}
-		
-		$.ajax({
-			type:'get',
-			url:'/manager/student/search', // 서버의 엔드포인트 URL
-// 			/*data: { classId<<컨트롤러에서 받는 위치: classId<<클라이언트가 보내는거})*/
-			data: {
-				classId:targetClassId
- 				, startDate:startDate
- 				, endDate:endDate
-			},
-			async:false,
-			success: function(stdtListResponse) {
-				clearTable();
-				
-				//교육과정명 변경 
-// 				if($(".title_a")){
-// 					console.log($(".title_a"));
-// 					console.log($.type($(".title_a")));
-// 				}
-				$(".title_a").text(stdtListResponse.thisClassVO.clssNm);
-				$(".title_a").attr("id", "className");
-				$(".title_a").val(stdtListResponse.thisClassVO.clssId);
-				$(".title_a").attr("href", "/manager/class/"+stdtListResponse.thisClassVO.clssId);
-				
-				//인원 수 입력
-				var stdtList = stdtListResponse.stdtList;
-				document.getElementById("stdtCnt").innerHTML=stdtList.length;
-				//End
-
-				//입력 시작
-				for(let i = 0; i < stdtList.length; i++){
-					var newRow = document.createElement("tr");
-					newRow.id="stdt_list_table_row";
-					
-					//체크박스 생성
-					var inputChk = document.createElement('input');
-					inputChk.id = 'chkStdt';
-					inputChk.value = stdtList[i].stdtId;
-					inputChk.setAttribute('name', 'chkStdt');
-					inputChk.type = 'checkBox';
-					
-					var rowChk = document.createElement('td');
-					rowChk.appendChild(inputChk);//체크박스
-					var rowNum = document.createElement('td');
-					rowNum.innerHTML=i+1;//행 번호
-					var rowName = document.createElement('td');
-					rowName.innerHTML=stdtList[i].stdtNm;//이름
-					var rowEmail = document.createElement('td');
-					rowEmail.innerHTML=stdtList[i].userEmail;//이메일
-					var rowTel = document.createElement('td');
-					rowTel.innerHTML=stdtList[i].stdtTel;//전화번호
-					var rowGender = document.createElement('td');
-					rowGender.innerHTML=stdtList[i].genderCd;//성
-					var rowBirth = document.createElement('td');
-					rowBirth.innerHTML=stdtList[i].birthDd;//생일
-
-					newRow.appendChild(rowChk);
-					newRow.appendChild(rowNum);
-					newRow.appendChild(rowName);
-					newRow.appendChild(rowEmail);
-					newRow.appendChild(rowTel);
-					newRow.appendChild(rowGender);
-					newRow.appendChild(rowBirth);
-					$.ajax({
-						type:'get',
-						url:'/manager/student/search/codename',
-						async:false,
-						success: function(wlogResponse) {
-						wlogCodeNameList = wlogResponse.wlogCodeList;
-						for (let j = 0; j < wlogCodeNameList.length; j++) {
-							var rowWlog = document.createElement('td');
-							rowWlog.innerHTML=stdtList[i].wlogCnt.split(',')[j].substr(10);
-							newRow.appendChild(rowWlog);//출결상태
-						}
-						},error: function(error){console.log("error: ", error);}
-					})
-					
-					//▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽수정 필요
-					var cmptRate = document.createElement('td');
-					cmptRate.innerHTML="";
-					//△△△△△△△△△△△△△△△△△△△△△△△△△△△수정 필요
-					
-					var rowJob = document.createElement('td');
-					rowJob.innerHTML=stdtList[i].jobCd;
-					
-					newRow.appendChild(cmptRate);
-					newRow.appendChild(rowJob);
-					//3) tbody에 붙인다
-					stdtListTable.append(newRow);
-				}
-				//End
-			},error: function(error){
-				console.log("error: ", error);
-			}
-		})
-		//개별 체크박스가 변경될 때 "전체" 체크박스 상태 업데이트
-		chkList = $("input[name=chkStdt]");//존재하는 stdt체크박스 리스트
-		isChecked = chkAll.prop("checked");//체크된 stdt체크박스 리스트
-		
-		chkList.on("change", function () {
-			allChecked = chkList.filter(":checked").length === chkList.length;
-			chkAll.prop("checked", allChecked);
-		})
-		//End
-	}
-//End : 검색 버튼 누르면 검색
-
-// 3. 이수 상태 변경
-	function cmptUpdate(button){
-// 		//1. 선택받은 아이들을 가져온다(var targetList)
-		var targetList = getCheckedStdt();
-		console.log(targetList);
-	
-// 		//2. 바꿀 값이 뭔지 가져온다(var cmptValue)+어떤 수업인지도 가져온다
-		var targetCmptId = button.value;
-		var thisClassId = $(".title_a").val();
-
-		console.log("targetCmptId: "+targetCmptId);
-		console.log("thisClassId: "+thisClassId);
-
-// 		//3. target이랑 cmptValue를 넘긴다
-		$.ajax({
-			//4. update한다
-			url : '/manager/student/updateCmpt',
-			type :'post',
-			data : {
-				targetList:targetList
-				,clssId:thisClassId
-				,targetCmptId:targetCmptId
-			},
-			success: function(updatedStdtList){
-				clearTable();
-				var startDate = document.getElementById("startDate").value;
-				var endDate = document.getElementById("endDate").value;
-				if(startDate==''){startDate=getFirstDay();}
-				if(endDate==''){endDate=getLastDay();}
-				var targetClassId = document.getElementById('classId').options[document.getElementById('classId').selectedIndex].value.split("(")[1].split(",")[0].split("=")[1];
-				//========================================================================================
-				$.ajax({
-					type:'get',
-					url:'/manager/student/search', // 서버의 엔드포인트 URL
-		// 			/*data: { classId<<컨트롤러에서 받는 위치: classId<<클라이언트가 보내는거})*/
-					data: {
-						classId:targetClassId
-		 				, startDate:startDate
-		 				, endDate:endDate
-					},
-					async:false,
-					success: function(stdtListResponse) {
-						var stdtList = stdtListResponse.stdtList;
-		
-						//입력 시작
-						for(let i = 0; i < stdtList.length; i++){
-							var newRow = document.createElement("tr");
-							newRow.id="stdt_list_table_row";
-							
-							//체크박스 생성
-							var inputChk = document.createElement('input');
-							inputChk.id = 'chkStdt';
-							inputChk.value = stdtList[i].stdtId;
-							inputChk.setAttribute('name', 'chkStdt');
-							inputChk.type = 'checkBox';
-							
-							var rowChk = document.createElement('td');
-							rowChk.appendChild(inputChk);//체크박스
-							var rowNum = document.createElement('td');
-							rowNum.innerHTML=i+1;//행 번호
-							var rowName = document.createElement('td');
-							rowName.innerHTML=stdtList[i].stdtNm;//이름
-							var rowEmail = document.createElement('td');
-							rowEmail.innerHTML=stdtList[i].userEmail;//이메일
-							var rowTel = document.createElement('td');
-							rowTel.innerHTML=stdtList[i].stdtTel;//전화번호
-							var rowGender = document.createElement('td');
-							rowGender.innerHTML=stdtList[i].genderCd;//성
-							var rowBirth = document.createElement('td');
-							rowBirth.innerHTML=stdtList[i].birthDd;//생일
-		
-							newRow.appendChild(rowChk);
-							newRow.appendChild(rowNum);
-							newRow.appendChild(rowName);
-							newRow.appendChild(rowEmail);
-							newRow.appendChild(rowTel);
-							newRow.appendChild(rowGender);
-							newRow.appendChild(rowBirth);
-							$.ajax({
-								type:'get',
-								url:'/manager/student/search/codename',
-								async:false,
-								success: function(wlogResponse) {
-								wlogCodeNameList = wlogResponse.wlogCodeList;
-								for (let j = 0; j < wlogCodeNameList.length; j++) {
-									var rowWlog = document.createElement('td');
-									rowWlog.innerHTML=stdtList[i].wlogCnt.split(',')[j].substr(10);
-									newRow.appendChild(rowWlog);//출결상태
-								}
-								},error: function(error){console.log("error: ", error);}
-							})
-							
-							//▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽▽수정 필요
-							var cmptRate = document.createElement('td');
-							cmptRate.innerHTML="";
-							//△△△△△△△△△△△△△△△△△△△△△△△△△△△수정 필요
-							
-							var rowJob = document.createElement('td');
-							rowJob.innerHTML=stdtList[i].jobCd;
-							
-							newRow.appendChild(cmptRate);
-							newRow.appendChild(rowJob);
-							//3) tbody에 붙인다
-							stdtListTable.append(newRow);
-						}
-						//End
-					},error: function(error){
-						console.log("error: ", error);
-					}
-				})
-				//개별 체크박스가 변경될 때 "전체" 체크박스 상태 업데이트
-				chkList = $("input[name=chkStdt]");//존재하는 stdt체크박스 리스트
-				isChecked = chkAll.prop("checked");//체크된 stdt체크박스 리스트
-
-				chkList.on("change", function () {
-					allChecked = chkList.filter(":checked").length === chkList.length;
-					chkAll.prop("checked", allChecked);
-				})
-				//========================================================================================
-			}
-			,error: function(error){
-				console.log("error: ", error);
-			}
-		});
-		
-		//개별 체크박스가 변경될 때 "전체" 체크박스 상태 업데이트
-		chkList = $("input[name=chkStdt]");//존재하는 stdt체크박스 리스트
-		isChecked = chkAll.prop("checked");//체크된 stdt체크박스 리스트
-		
-		chkList.on("change", function () {
-			allChecked = chkList.filter(":checked").length === chkList.length;
-			chkAll.prop("checked", allChecked);
-		})
-		//End
-	}
-//End : 이수 상태 변경
-</script>
-
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="/js/manager/student_list.js"></script>
 </html>
