--- a/KosaESS/src/main/resources/templates/include/manager_subbar_2.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar_2.html
@@ -11,8 +11,7 @@
 			<div class="logo_name">
 				<img class="logo" th:src="@{/img/logo_text.png}">
 			</div>
-			<i class='bx bx-menu' id="btn"><img class="open_icon"
-				th:src="@{/img/open.png}"></i>
+			<i class='bx bx-menu' id="btn"><img class="open_icon" th:src="@{/img/open.png}"></i>
 		</div>
 		<ul class="nav-list">
 		
@@ -21,7 +20,7 @@
 			<li><a th:href="@{/__${session.role}__/student}"> <i class='bx bx-heart'><img th:src="@{/img/student_white.png}"></i> <span class="links_name">교육생 관리</span> </a> <span class="tooltip">교육생 관리</span></li>
 			<li><a th:href="@{/__${session.role}__/worklog}"> <i class='bx bx-heart'><img th:src="@{/img/worklog_white.png}"></i> <span class="links_name">출퇴근 관리</span> </a> <span class="tooltip">출퇴근 관리</span></li>
 			<li><a th:href="@{/__${session.role}__/mypage}"> <i class='bx bx-heart'><img th:src="@{/img/mypage_white.png}"></i> <span class="links_name">내 정보 관리</span> </a> <span class="tooltip">내 정보 관리</span></li>
-			
+
 			<li class="profile">
 				<div class="profile-details">
 					<img th:src="@{/img/manager_navy.png}" alt="profileImg">
